# c-knjiga

10. Program Organization/examples/: externalVariables.c  guessing.c  guessingNumber.c  pokerhand.c  stack.c  test.c
10. Program Organization/projects/: calculators6.c  numberdisplay.c  numberdisplay7.c  pokermodification2.c  stackbrackets1.c
11.Pointers/exercises/: split_time1.c
11.Pointers/projects/: dollars1.c  numeratordenomi.c
12. Pointers And Arrays/exercises/: 1.c  12.c  2.c  3.c  6.c  7.c
12. Pointers And Arrays/projects/: palindrome2.c  reverseofwordsdruginacin5.c  reversewords5.c
12.PointersAnd Arrays/exercises/: 17.c  8.c  test.c
12.PointersAnd Arrays/projects/: max_minpointer.c  qsort6.c  reversealofmsg1.c
13. Strings/examples/: checkingplanetnames.c  remindthem.c  sort.c
13. Strings/exercises/: 12.c  13.c  17.c  18.c  capitalize.c  foo6.c  readline4.c  test.c
13. Strings/projects/: 10reversename.c  11averagewords.c  12wordreversal.c  13enkripcija.c  14anagramspointers.c  6planetsimproved.c  7numberprinting.c  8scrabbleimproved.c  9vowelimproved.c  date18.c  palindromeimproved17.c  reverse4.c  reversestring16.c  rpnimproved15.c  smallestlargestword1.c  sum5.c  tempCodeRunnerFile.c
14. Preprocessor/exercises/: 11.c  13.c  15.c  16.c  1a.c  2.c  6.c  7.c  (+1 more)
17.AdvancedPointers/: compare.c
17.AdvancedPointers/projects/3/: CMakeLists.txt  inventory2.c  readline.h
19.BigPrograms/exercises/3/array/: CMakeLists.txt  queue.h  queuearray.c  queueclient.c
19.BigPrograms/exercises/3/list/: CMakeLists.txt  queue.h  queuelist.c  queuelistclient.c
(+127 files in other folders)
